use URL params to set center of the map

--- a/traffic/index.htm
+++ b/traffic/index.htm
@@ -14,11 +14,14 @@
 	</style>
 	<script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU"></script>
 	<script type="text/javascript">
-ymaps.ready(init);
+const urlParams = new URLSearchParams(window.location.search);
+const lat = urlParams.get('lat') || 56.3; // NN
+const long = urlParams.get('long') || 43.98; // NN
+ymaps.ready(init, lat, long);
 
 function init () {
     var myMap = new ymaps.Map('map', {
-            center: [56.3, 43.98],
+            center: [lat, long],
             zoom: 12,
             controls: []
         });
